# opera-of-weirdness

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-documentation.yml
about/: index.html
assets/stylesheets/: extra.css
contact/: index.html
curiosities/: index.html
curiosities/crystal_caverns/: index.html
curiosities/deep_sea_dreamers/: index.html
curiosities/echo_chambers/: index.html
curiosities/gravirhythm_wells/: index.html
curiosities/lab/: index.html
curiosities/nebula_whispers/: index.html
curiosities/neon_abyss/: index.html
docs/: about.md  contact.md  index.md  todo.md  visitor_log.md
docs/curiosities/: crystal_caverns.md  deep_sea_dreamers.md  echo_chambers.md  gravirhythm_wells.md  index.md  lab.md  nebula_whispers.md  neon_abyss.md
docs/fleet/: index.md  mewsiform_accord.md
docs/researchers/: index.md  lucy_the_cat.md  zebulon_quirkythrum_iii.md
docs/sound-archive/: index.md  template.md  voc-17993.md
docs/the_universe/: groovitron.md  index.md
fleet/: index.html
researchers/: index.html
researchers/cyan/: index.html
researchers/lucy_the_cat/: index.html
researchers/zebulon_quirkythrum_iii/: index.html
search/: search_index.json
site/: 404.html  CNAME  index.html
site/about/: index.html
site/contact/: index.html
site/curiosities/: index.html
site/researchers/: index.html
site/search/: search_index.json
site/sound-archive/: index.html
sound-archive/: index.html
the_universe/: index.html
todo/: index.html
visitor_log/: index.html
(+17 files in other folders)
